--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,7 @@
 :root {
   --background: #f9fafb;
   --foreground: #1f2937;
+  --contrast: #ffffff;
 
   --primary: #2563eb;
   --secondary: #16a34a;
@@ -15,6 +16,7 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-contrast: var(--contrast);
   --color-primary: var(--primary);
   --color-secondary: var(--secondary);
   --color-text-primary: var(--text-primary);
